tests/expected_invalid_generic_record_type_missing_args.diag.out
<input>:6:23: error: generic record 'Box' requires type arguments
    public fn unwrap(box: Box) -> Int {
                          ^^^
